# MAJA

./: CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  ISSUE.md  Jenkinsfile  LICENSE.md  README.md  Readme.md  Start_maja.py  folders.txt  launch-generation-package.sh  maja_env_collect.sh  start_maja.py
CI/: ci_launcher.sh  (+6 more)
Code/Algorithms/L2/: CMakeLists.txt
Code/Core/: CMakeLists.txt  majaenv.sh.in  script.sh.in
Code/Core/Applications/: CMakeLists.txt
Code/Core/Data/: CMakeLists.txt
Code/Core/TestHelperLibrary/: CMakeLists.txt  LAUNCHER.processing.bash.cmake.in  vnsDataManagerTestingLibrary.cxx  vnsDataManagerTestingLibrary.h  vnsDummyProgram.cxx  vnsStreamingDifferenceImageFilter.h  vnsStreamingDifferenceImageFilter.txx  vnsTestHelper.cxx  vnsTestHelper.h  vnsTestMain.h  vnsTestMainLauncher.cxx
Doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.config.in  DoxyfileLight  DoxyfileLightOTB  DoxyfileWithoutITK  DoxygenHeader.html  MainPage.dox
Packaging/: CMakeLists.txt  CTestConfig.cmake  External_patchelf.cmake  PackageGlobals.cmake  check_cmake_variables.cmake  cleanup_package.cmake  clear_cmakecache_variables.cmake  configure_loader.cmake  create_package.cmake  detect_using_file_command.cmake  get_variables_ending_with.cmake  install_orchestrator.cmake  install_python_bindings.cmake  install_rule.cmake  install_share_dirs.cmake  install_startmaja.cmake  install_without_message.cmake  installer_files.cmake  patch_cmake_files.cmake  prepare_file_list.cmake  prepare_search_dirs.cmake  process_file_recurse.cmake  search_library.cmake  setif_value_in_list.cmake  update_make_symlinks_script.cmake
Packaging/Files/: CMakeLists.txt  README  linux_pkgsetup.in  vnsDummyProgram.sh  vnsTestMainLauncher.sh
Packaging/makeself/: makeself-header.sh  makeself.sh
Plugins/: CMakeLists.txt  README  README-VALIDATION  vnsInstallData.cxx
Plugins/Common/: CMakeLists.txt
Plugins/Common/Interfaces/: CMakeLists.txt
Plugins/LANDSAT8/: CMakeLists.txt
Plugins/LANDSAT8_MUSCATE/: CMakeLists.txt
Plugins/SENTINEL2/: CMakeLists.txt
Plugins/SENTINEL2_MUSCATE/: CMakeLists.txt
Plugins/SENTINEL2_TM/: CMakeLists.txt
Plugins/VENUS/: CMakeLists.txt
Plugins/VENUS_MUSCATE/: CMakeLists.txt
StartMaja/: .gitignore  CMakeLists.txt  Dockerfile  Start_maja.py  folders.txt  requirements.txt
StartMaja/Chain/: AuxFile.py  DummyFiles.py  GippFile.py  L8Product.py  Product.py  S2Product.py  VSProduct.py  Workplan.py
StartMaja/Common/: FileSystem.py  GDalDatasetWrapper.py  ImageApps.py  ImageIO.py  ImageTools.py  TestFunctions.py  XMLTools.py  __init__.py
StartMaja/Common/GDal/: buildvrt.py  merge.py  retile.py  translate.py  warp.py
StartMaja/cams_download/: convert_to_exo.py  download_CAMS_daily.py
StartMaja/cams_download/ecmwfapi/: LICENSE  README.md  __init__.py  api.py
StartMaja/prepare_mnt/: DTMCreation.py  README.md  getCoordinates.py
StartMaja/prepare_mnt/mnt/: DEMInfo.py  EuDEM.py  MNTBase.py  MNTFactory.py  SRTM.py  SiteInfo.py
StartMaja/test/: test_Start_maja.py  test_folders.txt
StartMaja/test/Chain/: test_AuxFile.py  test_DummyFiles.py  test_GippFile.py  test_L8Product.py  test_Product.py  test_S2Product.py  test_VSProduct.py  test_Workplan.py
StartMaja/test/Common/: test_FileSystem.py  test_GDalDatasetWrapper.py  test_ImageApps.py  test_ImageIO.py  test_ImageTools.py  test_XMLTools.py
StartMaja/userconf/: MAJAUserConfigSystem.xml  MAJAUserConfig_LANDSAT8.xml  MAJAUserConfig_LANDSAT8_MUSCATE.xml  MAJAUserConfig_VENUS.xml  MAJAUserConfig_VENUS_MUSCATE.xml
SuperBuild/: CMakeLists.txt  README.html  README.md
SuperBuild/CI/: ci_launcher.sh  maja_cots.cmake
SuperBuild/CMake/: BOOST.cmake  CTestCustom.cmake.in  CheckTargetSystemArch.cmake  GDAL.cmake  HDF4.cmake  ITK.cmake  JPEG.cmake  LAUNCHER.processing.bash.cmake.in  LXML.cmake  MAJA.cmake  MUPARSER.cmake  NUMPY.cmake  OTB.cmake  PATCHELF.cmake  PYTHON.cmake  SCIPY.cmake  SWIG.cmake  SuperBuild_Macro.cmake  patch.cmake
SuperBuild/CentOS_7/: Dockerfile
SuperBuild/patches/BOOST/: boost-CMakeLists.txt-all.diff
SuperBuild/patches/GDAL/: nmake_gdal_extra.opt.in  update_deprecated_shebang.sh
SuperBuild/patches/GEOS/: geos-1-fixes-all.diff
SuperBuild/patches/GEOTIFF/: geotiff-CMakeLists.txt-all.diff
SuperBuild/patches/ITK/: itk-1-fftw-all.diff  itk-CMakeLists.txt-all.diff  itk-Modules_Core_Common_include_itkGaussianOperator.hxx-all.diff  itk-Modules_Core_Common_include_itkProgressReporter.h-all.diff  itk-Modules_Core_Common_include_itkUnaryFunctorImageFilter.hxx-all.diff  itk-Modules_IO_Meta_src_itkMetaImageIO.cxx-all.diff  itk-Modules_ThirdParty_MetaIO_src_MetaIO_metaObject.h-all.diff  itk-vcl_compiler_h-all.diff
SuperBuild/patches/JPEG/: jpeg-1-fixconfig-all.diff
SuperBuild/patches/MUPARSER/: CMakeLists.txt
SuperBuild/patches/OPENTHREADS/: openthreads-CMakeLists.txt-all.diff
SuperBuild/patches/OSSIM/: ossim-1-addcmake-all.diff
SuperBuild/patches/OTB/: otb-CMakeLists.txt-all.diff  otb-Modules_Core_CommandLineParser-all.diff  otb-Modules_Core_ImageBase_include_otbMultiChannelExtractROI.hxx-all.diff  otb-Modules_Filtering_ImageManipulation_include_otbStreamingResampleImageFilter.txx-all.diff  otb-Modules_Wrapper_ApplicationEngine_include_otbWrapperInputImageListParameter.h-all.diff  otb-Modules_Wrapper_ApplicationEngine_include_otbWrapperOutputImageParameter.h-all.diff  (+5 more)
Testing/: CMakeLists.txt
Testing/LibMiscellaneous/: CMakeLists.txt  vnsCloudMaskUndersamplingImageFilterDeprecated.cxx  vnsCloudMaskUndersamplingImageFilterDeprecated.h  vnsExpandImageFilter.h  vnsExpandImageFilter.txx  vnsExpandVectorImageFilter.h  vnsExpandVectorImageFilter.txx  vnsRawExpandImageFilter.h  vnsRawExpandImageFilter.txx  vnsRawExpandVectorImageFilter.h  vnsRawExpandVectorImageFilter.txx  vnsRegionForSubsample.h  vnsRegionForSubsample.txx  vnsResamplerBuilder.h  vnsResamplerBuilder.txx  vnsTestingMacro.h
Testing/TU/: CMakeLists.txt
Testing/TV/: CMakeLists.txt
Testing/TVA/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/I3D/: CMakeLists.txt  MntIntersecteur.cpp  MntIntersecteur.h  Verbeux.cpp  Verbeux.h
(+1705 files in other folders)
